--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "randomstring": "^1.1.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.7.7",
     "@babel/node": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "babel-jest": "^26.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
-    "nodemon": "^1.19.4",
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.3",
     "supertest": "^4.0.2"
   }
 }
